-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
Lustre 2.0.63-1chaos
-
3
-
4887
When an OST is idle and has no outstanding locks (i.e. lock_count reports 0) it seems like the pool/grant_rate and pool/cancel_rate values become static. Also, the "samples" value for these fields in pool/stats remains static under the same circumstance (lock_count being 0). If lock_count is non zero, these values get updated at a given interval (which appears to be every second on our system).
This comes up when running IORs. For example, when an IOR finishes on our test system, and no other activity is occurring, these values remain static until the next IOR is started. Once the second IOR is started, the values drop back to zero and then fluctuate through the duration of the test.
Is this expected behavior? Talking with Chris, it seems that the grant_rate, cancel_rate, etc. should continue to be updated when there is no activity for a given OST (or at least zeroed out). Although, this is not the behavior we are seeing.
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.1 to version 2.1.2 Server support for kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1.el6 (RHEL6) Client support for unpatched kernels: 2.6.18308.4.1.el5 (RHEL5) 2.6.32220.17.1....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....